--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,3 +6,18 @@
 .width-10-em {
   width: 10em;
 }
+
+.Brand-Logo {
+  width: 50px;
+  height: 30px;
+  display: inline-block;
+  vertical-align: top !important;
+}
+
+.Action-Buttons {
+  text-align: right;
+}
+
+.Edit-Button {
+  margin-right: 10px;
+}
